# 3dbpp_master_thesis

./: .gitignore
aco_side/: Cargo.toml  complex_3dbpp_test_case.json  example_in.json  example_out.json
aco_side/src/: lib.rs  main.rs  structs.rs  utils.rs
python_side/: comparison_with_visualisation.py  train_ppo.py
python_side/input/: 3dBPP_test_2.txt
python_side/input/Elhedhli_dataset/: newproducts.pkl
