[package]
name = "aco3d_bpp"
version = "0.1.0"
edition = "2021"
author = "Michał Sawicki"

[lib]
name = "aco3dbpp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.18", features = ["extension-module"]}
rand = "0.8.0"
office = "0.8.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"


